force-app/main/default/objects/Booking_Note__c/Booking_Note__c.object-meta.xml
<CustomObject>
    <label>Booking Note</label>
    <nameField>
        <displayFormat>BN-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>