force-app/main/default/objects/Booking_Note__c/fields/Note_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Note_Created_By__c</fullName>
    <label>Note Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>