force-app/main/default/objects/Booking_Note__c/fields/Note_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Note_Created_Date__c</fullName>
    <label>Note Created Date</label>
    <type>Date</type>
</CustomField>